# Web-Agent

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
docs/: CODEX_AGENT_CONTEXT.md  CODEX_EMBEDDED_WIDGET.md
docs/public/: ARCHITECTURE.md  BRIDGE_CONTRACT.md  DEPLOYMENT.md  DOWNLOADS.md  QUICKSTART.md  RELEASES.md  SECURITY.md  USAGE.md
examples/basic/: index.html  local-test.html
examples/basic/agent-docs/: api-client.js  capabilities.json  website-overview.md
server/: .env.example  README.md  pyproject.toml
server/installers/linux/: install_webagent_bridge.sh  installer_ui.sh  uninstall_webagent_bridge.sh
server/installers/windows/: install_webagent_bridge.ps1  installer_ui.ps1  uninstall_webagent_bridge.ps1  webagent_protocol_template.reg
server/src/webagent_server/: bridge_runtime.py  desktop_app.py  installer.py  persistent_session.py  protocol_handler.py  server.py
server/src/webagent_server/docs/: CODEX_AGENT_CONTEXT_SUMMARY.md
server/src/webagent_server/plugins/: __init__.py  save_text_file.py
widget/: README.md  SHA256SUMS.txt  package.json  webagent-widget-0.1.0.tgz
